bk_ida/gccida/c3/expand_builtin_extract_return_addr
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_builtin_extract_return_addr/src/except.c:3726:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_builtin_extract_return_addr/src/obj/except.o] Error 1
